# AI_HW

AI2024-hw1/: README.md  autograder.py  eightpuzzle.py  game.py  grading.py  graphicsUtils.py  pacman.py  pyproject.toml  search.py  searchAgents.py  searchTestClasses.py  testClasses.py  util.py
AI2024-hw1/test_cases/q4/: CONFIG
AI2024-hw1/test_cases/q5/: CONFIG
AI2024-hw1/test_cases/q6/: CONFIG
AI2024-hw2/: README.md  multiAgents.py  multiagentTestClasses.py  pyproject.toml
AI2024-hw2/test_cases/q1/: CONFIG
AI2024-hw2/test_cases/q2/: CONFIG
AI2024-hw3/: README.md  logicPlan.py  pyproject.toml
AI2024-hw3/test_cases/q2/: CONFIG
AI2024-hw3/test_cases/q4/: CONFIG
AI2024-hw4/: bustersAgents.py  factorOperations.py  inference.py
AI2024-hw5-v2/: README.md  custom_env.py  nohup.out  pacman-intro.ipynb  pacman.py  requirements.txt  rl_algorithm.py  utils.py
AI2024-hw6/: DPO.py  ORPO.py  README.md  inference.py  inference.sh  main.py  run.sh  test_prompt.json  utils.py
AI2024-hw6/submission/: DPO_llama-3-8b-Instruct-bnb-4bit.json  DPO_mistral-7b-v0.3-bnb-4bit.json  ORPO_llama-3-8b-Instruct-bnb-4bit.json  ORPO_llama-3-8b-bnb-4bit.json  ORPO_mistral-7b-v0.3-bnb-4bit.json  llama-3-8b-bnb-4bit.json  mistral-7b-v0.3-bnb-4bit.json
AI2024-hw6/wandb/run-20240605_181048-rkherg8u/: run-rkherg8u.wandb
AI2024-hw6/wandb/run-20240605_181142-sia4b9bt/: run-sia4b9bt.wandb
AI2024-hw6/wandb/run-20240605_182641-gg5yggs9/: run-gg5yggs9.wandb
AI2024-hw6/wandb/run-20240605_182712-b8tpqkgv/: run-b8tpqkgv.wandb
HW4/AI2024-hw4/: README.md
(+100 files in other folders)
